--- a/index.css
+++ b/index.css
@@ -35,3 +35,9 @@ output {
   -webkit-font-smoothing: antialiased;
   color: #FFFFFF;
 }
+
+#Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
