--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   div {
   height: 50vh;
   }
 }
+
+*/
 
 body {
   background-color: #000000;
