--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 
 div {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: stretch;
   height: 100%;
