--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ div {
 */
 
 output {
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
   line-height: 1.5;
