--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ div {
   align-content: stretch;
   height: 100%;
   box-sizing: border-box;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   padding: 50px;
   align-self: stretch;
